# pentagon5-foundation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  MILESTONE4.md  MILESTONE6.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: foundation.yml  security.yml
apps/admin-console/: README.md
apps/macos-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/macos-desktop/src/: App.tsx  platform.test.ts  platform.ts  styles.css
apps/macos-desktop/src-tauri/: Cargo.toml  osv-scanner.toml  tauri.conf.json
apps/macos-desktop/src-tauri/capabilities/: default.json
apps/macos-desktop/src-tauri/icons/: icon.icns
apps/macos-desktop/src-tauri/src/: lib.rs  main.rs
backend/: README.md
backend/pentagon5_runtime/: __init__.py  config.py  database.py  envelopes.py  logging.py  observability.py  security.py  uuid7.py
docs/api/: README.md
docs/architecture/: DATABASE_ENTITY_MAP.md  REPOSITORY.md  SYSTEM_CONTEXT.md
docs/architecture/decisions/: 0001-contract-source-and-versioning.md  0002-identifiers-time-and-decimals.md  0003-postgresql-authoritative-store.md  0004-uuidv7-identifiers.md  0005-oidc-sessions-and-desktop-handoff.md  0006-api-and-websocket-boundary.md
docs/deployment/: LOCAL_DEVELOPMENT.md  MACOS_TOOLCHAIN.md
docs/operations/: MILESTONE_1.md  MILESTONE_2.md  MILESTONE_3.md
docs/security/: FOUNDATION.md
docs/testing/: STRATEGY.md
infrastructure/: __init__.py
infrastructure/database/: README.md  __init__.py  alembic.ini  metadata.py  metadata_0001.py  metadata_0002.py  seed.development.sql
infrastructure/database/migrations/: env.py
infrastructure/deployment/: README.md
infrastructure/monitoring/: README.md
infrastructure/scripts/: doctor.sh  secrets-init.sh  stack-health.sh
services/api-gateway/: README.md
services/audit-service/: README.md
services/authentication/: README.md
services/instrument-master/: README.md
services/market-data/: README.md
services/notification-service/: README.md
services/order-router/: README.md
services/reconciliation/: README.md
services/reporting/: README.md
services/risk-engine/: README.md
services/signal-allocator/: README.md
services/strategy-engine/: README.md
src/broker/: models.py  provider.py
src/marketdata/: models.py  provider.py
src/strategy/: mock_strategy.py  models.py  runner.py  strategy.py
tests/contract/: test_auth_contract.py  test_contract_fixtures.py  test_contract_schemas.py  test_repository_contract.py
tests/integration/: test_database.py
tests/security/: test_milestone3_security.py
tests/unit/: test_api_surface.py  test_auth_service.py  test_broker_provider.py  test_marketdata_provider.py  test_oidc.py  test_runtime_security.py  test_strategy.py  test_strategy_runner.py
(+14 files in other folders)
